Fixed nav bug and added article one
Fixed the navbar bug with position: fixed, added article one.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
             </header>
         </div>
     </div>
+    <main class="container">
+        <div class="main-container">
+            <div class="article-card article-one">
+                <div class="mastercraft-logo">
+                    <img src="images/logo-mastercraft.svg" alt="Logo of Mastercraft">
+                </div>
+                <div class="mastercraft-header">
+                    <h1 class="hero-text">Mastercraft Bamboo Monitor Raiser</h1>
+                    <p class="mastercraft-description text-clr">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+                </div>
+                <div class="cta-sec">
+                    <div class="cta-btn-sec">
+                        <button class="default-button-design cta-btn">Back this project</button>
+                    </div>
+                    <div class="bookmark-btn-sec">
+                        <button class="bookmark-btn"><img src="images/icon-bookmark.svg" alt="Bookmark Icon"><span class="bookmark-text text-clr">Bookmark</span></button>
+                    </div>
+                </div>
+            </div>
+            <div class="article-card"></div>
+            <div class="article-card"></div>
+        </div>
+    </main>
     <script src="script/main.js"></script>
 </body>
 </html>
