Added all of the articles to the page

--- a/index.html
+++ b/index.html
@@ -55,15 +55,83 @@
                 </div>
                 <div class="cta-sec">
                     <div class="cta-btn-sec">
-                        <button class="default-button-design cta-btn">Back this project</button>
+                        <button class="default-button-design cta-btn" aria-label="Button to back this project">Back this project</button>
                     </div>
                     <div class="bookmark-btn-sec">
-                        <button class="bookmark-btn"><img src="images/icon-bookmark.svg" alt="Bookmark Icon"><span class="bookmark-text text-clr">Bookmark</span></button>
+                        <button class="bookmark-btn" aria-label="Bookmark Button"><img src="images/icon-bookmark.svg" alt="Bookmark Icon"><span class="bookmark-text text-clr">Bookmark</span></button>
                     </div>
                 </div>
             </div>
-            <div class="article-card"></div>
-            <div class="article-card"></div>
+            <div class="article-card article-two">
+                <div class="fund-details">
+                    <div>
+                        <p class="number-text" id="total-amount">$89,914</p>
+                        <p class="text-clr">of $100,000 backed</p>
+                    </div>
+                    <span class="line-design line-color1"></span>
+                    <div>
+                        <p class="number-text">5,007</p>
+                        <p class="text-clr">total backers</p>
+                    </div>
+                    <span class="line-design line-color2"></span>
+                    <div>
+                        <p class="number-text">56</p>
+                        <p class="text-clr">days left</p>
+                    </div>
+                </div>
+                <div class="fund-range-sec">
+                    <div class="range-slider under-sec"></div>
+                    <div id="range-upper-slider" class="range-slider upper-sec"></div>
+                </div>
+            </div>
+            <div class="article-card article-three">
+                <div class="project-details">
+                    <h2 class="project-header">About this project</h2>
+                    <p class="text-clr">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates  your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand</p>
+                    <p class="text-clr">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB sticks to be stored under the stand.</p>
+                </div>
+                <div class="pledge-card-sec">
+                    <div class="pledge-card">
+                        <div class="pledge-header-sec">
+                            <h3 class="pledge-header">Bamboo Stand</h3>
+                            <p class="pledge-price">Pledge $25 or more</p>
+                        </div>
+                        <div class="pledge-details">
+                            <p class="text-clr">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you'll be added to a special Backer member list.</p>
+                        </div>
+                        <div class="pledge-cta-sec">
+                            <p class="text-clr"><span class="number-text">101</span> left</p>
+                            <button class="default-button-design select-reward-btn">Select Reward</button>
+                        </div>
+                    </div>
+                    <div class="pledge-card">
+                        <div class="pledge-header-sec">
+                            <h3 class="pledge-header">Black Edition Stand</h3>
+                            <p class="pledge-price">Pledge $75 or more</p>
+                        </div>
+                        <div class="pledge-details">
+                            <p class="text-clr">You get a Black Special Edition computer stand ans a personal thank you. You.ll be added to our Backer member list. Shipping is included.</p>
+                        </div>
+                        <div class="pledge-cta-sec">
+                            <p class="text-clr"><span class="number-text">64</span> left</p>
+                            <button class="default-button-design select-reward-btn">Select Reward</button>
+                        </div>
+                    </div>
+                    <div class="pledge-card">
+                        <div class="pledge-header-sec">
+                            <h3 class="pledge-header">Mahogany Special edition</h3>
+                            <p class="pledge-price">Pledge $200 or more</p>
+                        </div>
+                        <div class="pledge-details">
+                            <p class="text-clr">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You'll be added to our Backer member list. Shipping is included.</p>
+                        </div>
+                        <div class="pledge-cta-sec">
+                            <p class="text-clr"><span class="number-text">0</span> left</p>
+                            <button class="default-button-design select-reward-btn">Select Reward</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <script src="script/main.js"></script>
