--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <button id="back-project-btn" type="button" class="default-button-design cta-btn" aria-label="Back this project">Back this project</button>
                     </div>
                     <div class="bookmark-btn-sec">
-                        <button id="bookmark-btn" type="button" rel="sidebar" title="Bookmark this page" aria-label="Bookmark" class="bookmark-btn"><img src="images/icon-bookmark.svg" alt="Bookmark Icon"><span class="bookmark-text text-clr">Bookmark</span></button>
+                        <button id="bookmark-btn" type="button" title="Bookmark this page" aria-label="Bookmark" class="bookmark-btn"><img src="images/icon-bookmark.svg" alt="Bookmark Icon"><span class="bookmark-text text-clr">Bookmark</span></button>
                     </div>
                 </div>
             </div>
