--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crowdfunding Product Page</title>
-    <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png">
     <meta name="description" content="This is the Crowdfunding Product Page challenge by frontend mentor">
     <meta name="keywords" content="Crowdfunding Product Page, Crowdfunding Product Page challenge, Crowdfunding Product Page by frontend mentor, frontend mentor, frontend challenges">
     <meta name="author" content="Abdur Rahaman">
-    <meta property="og:title" content="Crowdfunding Product Page"/>
-    <meta property="og:description" content="This is the Crowdfunding Product Page challenge by frontend mentor"/>
-    <meta property="og:image" content="Add image url"/>
+    <meta property="og:title" content="Crowdfunding Product Page">
+    <meta property="og:description" content="This is the Crowdfunding Product Page challenge by frontend mentor">
+    <meta property="og:image" content="https://raw.githubusercontent.com/arbaiv/crowdfunding-product-page-challenge/main/images/screenshot/desktop-screenshot-design.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
