Fixed maxlength error in number input

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <div class="pledge-sec" aria-live="assertive">
                             <p class="text-clr"><label for="bamboo-stand-pledge-price-input">Enter your pledge</label><span class="validation-error">Please enter a valid price greater than or equals to 25</span></p>
                             <div class="pledge-button-sec">
-                                <input id="bamboo-stand-pledge-price-input" type="number" name="pledgePrice" min="25" class="pledge-price-btn" value="25" data-bamboo-stand-input maxlength="4">
+                                <input id="bamboo-stand-pledge-price-input" type="number" name="pledgePrice" min="25" class="pledge-price-btn" value="25" data-bamboo-stand-input data-maxlength="4">
                                 <button type="button" aria-label="Continue" class="default-button-design continue-button" data-continue-pledge="bambooStand">Continue</button>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                         <div class="pledge-sec" aria-live="assertive">
                             <p class="text-clr"><label for="black-edition-stand-pledge-price-input">Enter your pledge</label><span class="validation-error">Please enter a valid price greater than or equals to 75</span></p>
                             <div class="pledge-button-sec">
-                                <input id="black-edition-stand-pledge-price-input" type="number" name="pledgePrice" min="75" class="pledge-price-btn" value="75" data-black-edition-stand-input maxlength="4">
+                                <input id="black-edition-stand-pledge-price-input" type="number" name="pledgePrice" min="75" class="pledge-price-btn" value="75" data-black-edition-stand-input data-maxlength="4">
                                 <button type="button" aria-label="Continue" class="default-button-design continue-button" data-continue-pledge="blackEditionStand">Continue</button>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                         <div class="pledge-sec" aria-live="assertive">
                             <p class="text-clr"><label for="mahogany-stand-pledge-price-input">Enter your pledge</label><span class="validation-error">Please enter a valid price greater than or equals to 200</span></p>
                             <div class="pledge-button-sec">
-                                <input id="mahogany-stand-pledge-price-input" type="number" name="pledgePrice" min="200" class="pledge-price-btn" value="200" data-mahogany-stand-input maxlength="4">
+                                <input id="mahogany-stand-pledge-price-input" type="number" name="pledgePrice" min="200" class="pledge-price-btn" value="200" data-mahogany-stand-input data-maxlength="4">
                                 <button type="button" aria-label="Continue" class="default-button-design continue-button" data-continue-pledge="mahoganyStand">Continue</button>
                             </div>
                         </div>
